--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -222,11 +222,13 @@
 }
 
 .liste {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  width: 100%;
+  box-sizing: border-box;
   gap: 24px;
-  padding: 40px var(--gouttiere);
+  grid-template-columns: repeat(auto-fill, minmax(242px, 1fr));
   align-content: flex-start;
+  padding: 40px var(--gouttiere);
 
   @include a-partir-de(md) {
     gap: 32px 16px;
@@ -234,6 +236,10 @@
 
   @include a-partir-de(lg) {
     padding: 0;
+  }
+
+  @include a-partir-de(xl){
+    grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
   }
 }
 
@@ -446,16 +452,6 @@
 
     @include a-partir-de(md) {
       height: 174px;
-    }
-
-    img {
-      width: 243px;
-      height: 131px;
-
-      @include a-partir-de(md) {
-        width: 270px;
-        height: 146px;
-      }
     }
   }
 
