--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -45,7 +45,7 @@
     display: block;
   }
 
-  @include a-partir-de(xl){
+  @include a-partir-de(xl) {
     margin-left: var(--gouttiere);
     margin-right: var(--gouttiere);
   }
@@ -128,7 +128,7 @@
     margin: 0 0 32px;
     padding: 0 0 32px;
     border: none;
-    border-bottom: 1px solid #D9DADB;
+    border-bottom: 1px solid #d9dadb;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -167,7 +167,7 @@
         line-height: 1rem;
       }
 
-      input[type=checkbox] {
+      input[type="checkbox"] {
         appearance: none;
         border: 1px solid var(--noir);
         border-radius: 4px;
@@ -176,10 +176,10 @@
         margin: 0;
 
         &:checked {
-          background-color: #FED980;
+          background-color: #fed980;
 
           &::before {
-            content: '';
+            content: "";
             display: block;
             margin: auto;
             width: 6px;
@@ -238,7 +238,7 @@
     padding: 0;
   }
 
-  @include a-partir-de(xl){
+  @include a-partir-de(xl) {
     grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
   }
 }
@@ -322,7 +322,7 @@
   .carte {
     background: white;
     border-radius: 8px;
-    border-bottom: 6px solid #FED980;
+    border-bottom: 6px solid #fed980;
     padding: 24px;
 
     &.parcours {
@@ -352,9 +352,8 @@
         text-decoration: none;
         border-bottom: 1px solid var(--noir);
 
-
         &::after {
-          content: '';
+          content: "";
           background: url("/assets/images/icone-fleche-droite.svg");
           width: 16px;
           height: 16px;
@@ -371,10 +370,10 @@
       grid-template-columns: auto;
       grid-template-rows: auto;
       grid-template-areas:
-          "illustration"
-          "titre"
-          "contenu"
-          "bouton";
+        "illustration"
+        "titre"
+        "contenu"
+        "bouton";
 
       @include a-partir-de(md) {
         padding: 48px 56px;
@@ -393,7 +392,7 @@
           "illustration contenu"
           "illustration bouton"
           "illustration .";
-        gap: 16px 64px
+        gap: 16px 64px;
       }
 
       h1 {
@@ -439,7 +438,8 @@
   }
 }
 
-.carte.service, .carte.ressource {
+.carte.service,
+.carte.ressource {
   display: flex;
   flex-direction: column;
 
