--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -11,6 +11,10 @@
   flex-direction: column;
   gap: 24px;
 
+  @include a-partir-de(md) {
+    gap: 16px;
+  }
+
   @include a-partir-de(lg) {
     padding-bottom: 130px;
   }
@@ -29,12 +33,23 @@
     font-size: 2.5rem;
     line-height: 2.875rem;
     margin: 0;
+
+    @include a-partir-de(md) {
+      font-size: 3.5rem;
+      line-height: 3.875rem;
+      margin-top: 24px;
+    }
   }
 
   p {
     margin: 0;
     font-size: 1.125rem;
     line-height: 1.625rem;
+
+    @include a-partir-de(md) {
+      font-size: 1.375rem;
+      line-height: 2rem;
+    }
   }
 }
 
