Ajuste un padding

--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -99,6 +99,11 @@
     cursor: pointer;
     background: white;
 
+    @include a-partir-de(md) {
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
+
     @include a-partir-de(lg) {
       border-radius: 0;
       flex: 1;
