Ajoute une marge à droite

--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -64,6 +64,7 @@
   position: relative;
   top: -90px;
   margin-left: 24px;
+  margin-right: 24px;
   margin-bottom: -90px;
 
   @include a-partir-de(lg) {
