Retourne le chevron lorsque les filtres sont ouverts

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -302,6 +302,10 @@ footer {
   }
 
   details {
+    &[open] summary .entete-filtres .chevron  {
+      transform: rotate(180deg);
+    }
+
     summary {
       &::marker {
         content: '';
