Grossis le titre à partir de tablette

--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -337,6 +337,10 @@
     font-size: 2rem;
     line-height: 2.375rem;
     margin: 0 0 16px;
+
+    @include a-partir-de(lg) {
+      font-size: 2.5rem;
+    }
   }
 
   h2 {
