--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -364,7 +364,7 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
-      flex-grow: 1;
+      flex: 1;
 
       img {
         height: 170px;
