--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -374,6 +374,11 @@
       h2 {
         margin: 0;
         padding: 0;
+
+        @include a-partir-de(md) {
+          font-size: 1.375rem;
+          line-height: 1.75rem;
+        }
       }
 
       a {
