--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -315,6 +315,11 @@
   flex-direction: column;
   gap: 24px;
 
+  @include a-partir-de(md) {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
   .liste-parcours {
     display: flex;
     flex-direction: column;
@@ -338,8 +343,9 @@
     line-height: 2.375rem;
     margin: 0 0 16px;
 
-    @include a-partir-de(lg) {
+    @include a-partir-de(md) {
       font-size: 2.5rem;
+      line-height: 3rem;
     }
   }
 
