--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -374,7 +374,7 @@
 
       @include a-partir-de(md) {
         padding: 40px;
-        gap:24px;
+        gap: 24px;
       }
 
       img {
@@ -466,6 +466,7 @@
 
       a {
         grid-area: bouton;
+        padding: 10px 24px;
         @include a-partir-de(lg) {
           margin-top: 8px;
           justify-self: start;
