Fixe la largeur des cartes liées au service
… sinon elles prennent toute la largeur de la page, ce qui rend mal.

--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -522,6 +522,7 @@
 .carte.ressource {
   display: flex;
   flex-direction: column;
+  width: auto;
 
   @include a-partir-de(md) {
     height: 406px;
