--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import 'responsive';
+@import "responsive";
 
 :root {
   --noir: #0d0c21;
@@ -20,7 +20,6 @@ body {
   color: var(--noir);
   margin: 0;
 }
-
 
 header {
   nav {
@@ -88,7 +87,7 @@ header {
 }
 
 .bouton {
-  font-family: 'Marianne';
+  font-family: "Marianne";
   display: flex;
   justify-content: center;
   border-radius: 8px;
@@ -112,7 +111,8 @@ header {
   color: white;
 }
 
-.carte.ressource, .carte.service {
+.carte.ressource,
+.carte.service {
   border: 1px solid #ddd;
   border-radius: 8px;
   display: flex;
@@ -151,7 +151,7 @@ header {
       border-radius: 8px;
 
       &:before {
-        content: '';
+        content: "";
         background-image: url("/assets/images/icone-ressource.svg");
         width: 12px;
         height: 12px;
@@ -173,7 +173,7 @@ header {
     h3 {
       margin: 0;
       padding: 0;
-      font-size: .875rem;
+      font-size: 0.875rem;
       line-height: 1.5rem;
       font-weight: 400;
     }
@@ -260,7 +260,7 @@ footer {
   a {
     text-decoration: none;
     color: var(--noir);
-    font-size: .75rem;
+    font-size: 0.75rem;
     line-height: 1.5rem;
   }
 }
@@ -304,13 +304,13 @@ footer {
   }
 
   details {
-    &[open] summary .entete-filtres .chevron  {
+    &[open] summary .entete-filtres .chevron {
       transform: rotate(180deg);
     }
 
     summary {
       &::marker {
-        content: '';
+        content: "";
       }
 
       &::-webkit-details-marker {
@@ -333,5 +333,4 @@ footer {
       flex-grow: 1;
     }
   }
-
 }
