--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -280,6 +280,10 @@ footer {
     line-height: 1.5rem;
     font-weight: normal;
   }
+
+  img {
+    margin-left: auto;
+  }
 }
 
 .sommaire-replie {
