Transforme toute la carte en lien
Pour la partie `service.html` j'ai fait un `if` qui rend tout le `<a>` car je ne savais pas faire de liquid pour valoriser seulement l'attribut `href`.

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -87,7 +87,11 @@ script: /scripts/service.js
             {% for idRessource in page.ressources %}
             {% assign ressource = site.ressources | where: "id", idRessource | first %}
 
-            <div class="carte ressource">
+            {% if ressource.avecFicheDetaillee %}
+                <a class="carte ressource" href="{{ressource.url}}">
+            {% else %}
+                <a class="carte ressource" href="{{ressource.lien}}">
+            {% endif %}
                 <figure>
                     <img src="/assets/images/illustrations-services/{{ressource.illustration}}">
                     <figcaption>{{ressource.format}}</figcaption>
@@ -110,7 +114,7 @@ script: /scripts/service.js
                         {% endif %}
                     </div>
                 </div>
-            </div>
+            </a>
             {% endfor %}
         </section>
 
