--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -121,8 +121,13 @@ header {
   text-decoration: none;
   color: var(--noir);
 
-  &:hover .contenu {
-    background: #f6f6f6;
+  &:hover {
+    figure img {
+      transform: translateY(0);
+    }
+    .contenu {
+      background: #f6f6f6;
+    }
   }
 
   figure {
@@ -140,6 +145,8 @@ header {
       height: 131px;
       width: 243px;
       box-shadow: 0 4px 12px 0 rgba(0, 0, 18, 0.32);
+      transform: translateY(8px);
+      transition: all 0.1s ease;
     }
 
     figcaption {
