--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -6,6 +6,8 @@
 .chapeau {
   background: #f4f4f4 url("/assets/images/motif-fond-service.png");
   padding: 24px var(--gouttiere);
+  display: flex;
+  flex-direction: column;
 
   @include a-partir-de(xxl) {
     padding-bottom: 0;
@@ -26,6 +28,8 @@
 
   .fil-ariane {
     margin-bottom: 24px;
+    align-self: flex-start;
+    background: #f4f4f4;
   }
 
   .resume {
