--- a/assets/styles/responsive.scss
+++ b/assets/styles/responsive.scss
@@ -22,6 +22,7 @@ $points-de-rupture-a-partir-de: (
 
 :root {
   --gouttiere: 16px;
+  --largeur-max-contenu: 1200px;
 
   @include a-partir-de(md) {
     --gouttiere: 56px;
