Limite le contenu de l’entête et du pied de page à 1200px

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header id="haut-de-page">
-  <nav>
-    <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
-    <button class="menu">
-      <img src="/assets/images/icone-menu.svg"/>
-    </button>
-  </nav>
+    <nav>
+        <div class="contenu-section">
+            <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
+            <button class="menu">
+                <img src="/assets/images/icone-menu.svg"/>
+            </button>
+        </div>
+    </nav>
 </header>
