--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer>
-    <a href="#">Plan du site</a>
-    <a href="#">Mentions légales</a>
-    <a href="#">Politique de confidentialité</a>
-    <a href="#">Conditions générales</a>
-    <a href="#">Statistiques d'utilisation</a>
+    <div class="contenu-section">
+        <a href="#">Plan du site</a>
+        <a href="#">Mentions légales</a>
+        <a href="#">Politique de confidentialité</a>
+        <a href="#">Conditions générales</a>
+        <a href="#">Statistiques d'utilisation</a>
+    </div>
 </footer>
