--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -23,11 +23,14 @@ body {
 
 header {
   nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding-left: var(--gouttiere);
     padding-right: var(--gouttiere);
+
+    .contenu-section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
 
     .marianne {
       width: 108px;
@@ -130,6 +133,7 @@ header {
     figure img {
       transform: translateY(0);
     }
+
     .contenu {
       background: #f6f6f6;
     }
@@ -265,15 +269,18 @@ header {
 
 footer {
   border-top: 2px solid var(--noir);
-  padding: 16px var(--gouttiere) 24px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
 
-  @include a-partir-de(md) {
-    flex-direction: row;
+  .contenu-section {
+    display: flex;
+    flex-direction: column;
     gap: 16px;
+    @include a-partir-de(md) {
+      flex-direction: row;
+      gap: 16px;
+    }
   }
+
+  padding: 16px var(--gouttiere) 24px;
 
   a {
     text-decoration: none;
