--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -180,6 +180,7 @@
       display: flex;
       gap: 8px;
       align-items: center;
+      cursor: pointer;
 
       .libelle {
         display: flex;
@@ -207,6 +208,7 @@
         width: 24px;
         height: 24px;
         margin: 0;
+        cursor: pointer;
 
         &:checked {
           background-color: #fed980;
