--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -34,7 +34,7 @@
   h1 {
     font-size: 2.5rem;
     line-height: 2.875rem;
-    margin: 0;
+    margin: 0 0 16px;
 
     @include a-partir-de(md) {
       font-size: 3.5rem;
