--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -1,8 +1,13 @@
 ---
 ---
+
+section {
+  padding: 24px var(--gouttiere);
+}
+
 .titres-page {
   border-top: 1px solid #ddd;
-  padding: 12px 16px;
+  padding: 12px var(--gouttiere);
 
   h1 {
     margin: 0;
@@ -25,7 +30,7 @@
 
 .sommaire {
   overflow: auto;
-  padding: 32px 0 16px;
+  padding: 32px var(--gouttiere) 16px;
 
   .groupe-boutons {
     .bouton {
