Ajoute l’encart de test de maturité

--- a/_includes/encart-test-maturite.html
+++ b/_includes/encart-test-maturite.html
@@ -1,4 +1,4 @@
-<section class="encart fond-clair">
+<section class="encart fond-{{ include.fond }}">
   <div class="contenu-section">
     <div class="carte test-maturite">
       <img
