--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -416,3 +416,185 @@ footer {
     }
   }
 }
+
+.encart {
+  padding: 40px var(--gouttiere);
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  @include a-partir-de(md) {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .liste-parcours {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    @include a-partir-de(md) {
+      flex-direction: row;
+    }
+  }
+
+  &.fond-sombre {
+    background: #0d0c21 url("/assets/images/motif-fond-service-opacite-16.png");
+
+    h1 {
+      color: white;
+    }
+  }
+
+  h1 {
+    font-size: 2rem;
+    line-height: 2.375rem;
+    margin: 0 0 16px;
+
+    @include a-partir-de(md) {
+      font-size: 2.5rem;
+      line-height: 3rem;
+    }
+  }
+
+  h2 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin: 16px 0;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+
+  .carte {
+    background: white;
+    border-radius: 8px;
+    border-bottom: 6px solid #fed980;
+    padding: 24px;
+
+    &.parcours {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      flex: 1;
+
+      @include a-partir-de(md) {
+        padding: 40px;
+        gap: 24px;
+      }
+
+      img {
+        height: 170px;
+        align-self: flex-start;
+      }
+
+      h2 {
+        margin: 0;
+        padding: 0;
+
+        @include a-partir-de(md) {
+          font-size: 1.375rem;
+          line-height: 1.75rem;
+        }
+      }
+
+      a {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        align-self: flex-end;
+        margin: 0;
+        color: var(--noir);
+        text-align: right;
+        text-decoration: none;
+        border-bottom: 1px solid var(--noir);
+
+        &::after {
+          content: "";
+          background: url("/assets/images/icone-fleche-droite.svg");
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+
+    &.test-maturite {
+      box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
+      padding-top: 40px;
+      display: grid;
+      gap: 24px 16px;
+
+      grid-template-columns: auto;
+      grid-template-rows: auto;
+      grid-template-areas:
+        "illustration"
+        "titre"
+        "contenu"
+        "bouton";
+
+      @include a-partir-de(md) {
+        padding: 48px 56px;
+        grid-template-columns: 1fr auto;
+        grid-template-areas:
+          "titre titre"
+          "contenu illustration"
+          "bouton bouton";
+      }
+
+      @include a-partir-de(lg) {
+        padding: 40px 44px 40px 40px;
+        grid-template-columns: auto 1fr;
+        grid-template-areas:
+          "illustration titre"
+          "illustration contenu"
+          "illustration bouton"
+          "illustration .";
+        gap: 16px 64px;
+      }
+
+      h1 {
+        grid-area: titre;
+        margin: 0;
+        color: var(--noir);
+        @include a-partir-de(md) {
+          font-size: 2.5rem;
+          line-height: 3rem;
+        }
+      }
+
+      p {
+        grid-area: contenu;
+        font-size: 1.25rem;
+        line-height: 1.875rem;
+        @include a-partir-de(md) {
+          align-self: center;
+        }
+      }
+
+      a {
+        grid-area: bouton;
+        padding: 10px 24px;
+        @include a-partir-de(lg) {
+          margin-top: 8px;
+          justify-self: start;
+        }
+      }
+
+      img {
+        grid-area: illustration;
+        height: 210px;
+        margin-bottom: 16px;
+
+        @include a-partir-de(md) {
+          height: 163px;
+          margin-bottom: 0;
+        }
+        @include a-partir-de(lg) {
+          height: 210px;
+        }
+      }
+    }
+  }
+}
