Homogénéise l’affichage des cartes avec le catalogue

--- a/_includes/carte-item.html
+++ b/_includes/carte-item.html
@@ -9,8 +9,8 @@
     <figcaption>{{item.format}}</figcaption>
   </figure>
   <div class="contenu">
-    <h3>{{item.titre}}</h3>
-    <span>{{item.description}}</span>
+    <h3>{{item.nom}}</h3>
+    <span class="description">{{item.description}}</span>
     <div class="labels">
       {% for source in item.sources %}
       <span>{{source}}</span>
