Corrige l’affichage du badge pour les services

--- a/_includes/carte-item.html
+++ b/_includes/carte-item.html
@@ -6,7 +6,13 @@
 {% endif %}
   <figure>
     <img src="/assets/images/illustrations-services/{{item.illustration}}">
-    <figcaption>{{item.format}}</figcaption>
+    <figcaption>
+      {% if item.typologie == 'service' %}
+        Service
+      {% else %}
+        {{item.format}}
+      {% endif %}
+    </figcaption>
   </figure>
   <div class="contenu">
     <h3>{{item.nom}}</h3>
