--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -31,9 +31,13 @@ section {
 }
 
 .sommaire {
-  overflow: auto;
+  .contenu-section {
+    padding-bottom: 16px;
+    overflow: auto;
+  }
+
   margin-top: 16px;
-  padding: 16px var(--gouttiere) 16px;
+  padding: 16px var(--gouttiere) 0;
   background: white;
   position: sticky;
   top: 0;
