Étire le sommaire sur toute la largeur
...de manière égale entre tous les boutons qui ont une largeur minimale de 185px.

--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -46,6 +46,8 @@ section {
   .groupe-boutons {
     .bouton {
       text-wrap: nowrap;
+      flex: 1 0 185px;
+      box-sizing: border-box;
     }
   }
 }
