--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -108,6 +108,7 @@ section.action {
   h2 {
     grid-column: 1 / -1;
     @include a-partir-de(lg) {
+      margin-top: 16px;
       grid-column: 2/-1;
     }
   }
