--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -55,6 +55,7 @@ section {
 section.action {
   padding-top: 48px;
   padding-bottom: 48px;
+  scroll-margin-top: 90px; /* Hauteur de la barre de navigation */
 
   h1 {
     font-size: 2rem;
