--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -638,3 +638,26 @@ footer {
     }
   }
 }
+
+.titres-page {
+  border-top: 1px solid #ddd;
+  padding: 12px var(--gouttiere);
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    color: #161616;
+  }
+
+  h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    color: #3A3A3A;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+  }
+}
