--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -3,6 +3,12 @@
 
 @import 'responsive';
 
+:root {
+  @include a-partir-de(md) {
+    --gouttiere: 16px;
+  }
+}
+
 .chapeau.fond-sombre {
   padding: 48px var(--gouttiere);
 
@@ -20,13 +26,23 @@
     margin-bottom: 40px;
   }
 
+  .boutons {
+    display: flex;
+    flex-direction: column;
+    @include a-partir-de(sm) {
+      flex-direction: row;
+      gap:16px;
+      justify-content: center;
+    }
+  }
+
   .bouton {
     margin-bottom: 16px;
+    padding: 10px 24px;
   }
 
   .bouton.secondaire {
     color: white;
-    padding: 10px 0;
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
@@ -58,6 +74,8 @@
 
   .bouton.primaire {
     margin: 16px 0;
+    align-self: center;
+    padding: 10px 24px;
   }
 }
 
@@ -144,6 +162,10 @@
       &:after {
         content: none;
       }
+
+      @include a-partir-de(sm) {
+        width: auto;
+      }
     }
   }
 }
@@ -217,6 +239,10 @@
       align-self: center;
       margin: 16px auto;
       width: 218px;
+
+      @include a-partir-de(sm) {
+        width: auto;
+      }
     }
   }
 }
@@ -235,6 +261,10 @@
     gap: 24px;
     border-bottom: 6px solid var(--noir);
     box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
+
+    .illustration {
+      max-width: 240px;
+    }
 
     h1 {
       margin: 0;
@@ -260,7 +290,7 @@
     border-color: var(--noir);
     display: flex;
     gap: 8px;
-    margin-bottom: 16px;
+    margin: 32px 0 16px;
   }
 }
 
