--- a/assets/styles/boutons.scss
+++ b/assets/styles/boutons.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   border-radius: 8px;
   text-align: center;
-  padding: 10px;
+  padding: 10px 24px;
   text-decoration: none;
   font-weight: 500;
   border: none;
