--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     @include a-partir-de(sm) {
       flex-direction: row;
-      gap:16px;
+      gap: 16px;
       justify-content: center;
     }
   }
@@ -143,15 +143,53 @@
   padding-bottom: 48px;
 
   .carte.parcours {
-    gap: 24px;
+    display: grid;
+    gap: 24px 16px;
+
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "illustration"
+        "titre"
+        "contenu"
+        "bouton";
+
+    @include a-partir-de(lg) {
+      grid-template-columns: auto 384px;
+      grid-template-areas:
+        "titre illustration"
+        "contenu illustration"
+        "bouton illustration";
+    }
+
+    .illustration {
+      grid-area: illustration;
+      @include a-partir-de(lg) {
+        height: 205px;
+        padding: 38px 51px;
+      }
+    }
+
+    h2 {
+      grid-area: titre;
+      @include a-partir-de(lg) {
+        font-size: 2.5rem;
+        line-height: 3rem;
+      }
+    }
+
+    p {
+      grid-area: contenu;
+    }
 
     .bouton.primaire {
       text-align: center;
       border-bottom: none;
       margin-top: 32px;
-      align-self: center;
+      justify-self: center;
       width: 120px;
       padding: 10px 24px;
+      grid-area: bouton;
 
       &:after {
         content: none;
@@ -159,6 +197,12 @@
 
       @include a-partir-de(sm) {
         width: auto;
+      }
+
+      @include a-partir-de(lg) {
+        width: fit-content;
+        justify-self: flex-start;
+        margin-top: 16px;
       }
     }
   }
@@ -171,6 +215,19 @@
     display: flex;
     flex-direction: column;
 
+    .contenu-msc {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+
+      @include a-partir-de(lg) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: stretch;
+        grid-template-areas: "fonctions illustration";
+      }
+    }
+
     h1 {
       margin: 0 0 24px;
       text-align: center;
@@ -180,6 +237,10 @@
 
     img {
       margin: 40px 0 16px;
+      @include a-partir-de(lg) {
+        grid-area: illustration;
+        align-self: center;
+      }
     }
 
     .fonctions-msc {
@@ -187,6 +248,7 @@
       flex-direction: column;
       gap: 40px;
       margin: 24px 0;
+      grid-area: fonctions;
 
       .fonction-msc {
         position: relative;
@@ -250,26 +312,52 @@
     border-radius: 8px;
     box-sizing: border-box;
     padding: 24px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-areas: "illustration" "titre" "contenu" "bouton";
     gap: 24px;
     border-bottom: 6px solid var(--noir);
     box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
 
+    @include a-partir-de(lg) {
+      grid-template-areas:
+              "titre illustration"
+              "contenu illustration"
+              "bouton illustration";
+    }
+
     .illustration {
       max-width: 240px;
+      grid-area: illustration;
+      @include a-partir-de(lg) {
+        height: 211px;
+        padding: 46px 51px;
+      }
     }
 
     h1 {
       margin: 0;
       font-size: 2rem;
       line-height: 2.5rem;
+      grid-area: titre;
+      @include a-partir-de(lg) {
+        font-size: 2.5rem;
+        line-height: 3rem;
+      }
     }
 
     p {
       margin: 0;
       font-size: 1.25rem;
       line-height: 2rem;
+      grid-area: contenu;
+    }
+
+    .bouton {
+      grid-area: bouton;
+      justify-self: center;
+      @include a-partir-de(lg) {
+        justify-self: flex-start;
+      }
     }
   }
 }
