Centre les libellés des besoins

--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -98,6 +98,7 @@
       cursor: pointer;
       background: white;
       flex: 1 0 290px;
+      justify-content: center;
 
       &:first-of-type {
         border-top-left-radius: 8px;
