--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -14,6 +14,10 @@
     font-size: 4.5rem;
     line-height: 5rem;
     margin: 0 0 32px;
+    @include a-partir-de(sm) {
+      font-size: 5rem;
+      line-height: 5.5rem;
+    }
   }
 
   p {
