[CORRECTION] Corrige l’affichage de la cible d’une service

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -72,7 +72,7 @@ script: /scripts/service.js
 
         <section class="cible" id="cible">
             <h2>Qui peut utiliser ce service&nbsp;?</h2>
-            <span>{{ page.cibleService }}</span>
+            <span>{{ page.cible }}</span>
 
             <div class="cartes">
                 {% for lien in page.liens %}
