Ajoute du contenu à l'étape « Informations complémentaires »

--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -23,6 +23,21 @@
       margin-top: 16px;
     }
   }
+
+  .informations-complementaires {
+    label {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .choix-taille {
+      border: none;
+
+      label {
+        flex-direction: row;
+      }
+    }
+  }
 }
 
 #radar {
