--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -44,3 +44,74 @@
   width: 400px;
   height: 400px;
 }
+
+.tuiles-niveau {
+  display: flex;
+  gap: 24px;
+
+  .tuile-niveau {
+    border: 1px solid #DDDDDD;
+    border-radius: 8px;
+    padding: 16px;
+    background: #F6F6F6;
+    flex: 0 0 182px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    font-weight: bold;
+    gap: 8px;
+    position: relative;
+
+    .illustration {
+      order: 3;
+      z-index: 2;
+    }
+
+    .coche {
+      order: 2;
+    }
+
+    span {
+      order: 1;
+    }
+
+    &.inactif {
+      img {
+        filter: grayscale(100%);
+      }
+    }
+
+    &.actif {
+      background: white;
+    }
+
+    &.courant {
+      border: none;
+      border-radius: 0;
+      background: #FFF7DB;
+
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: -4px;
+        bottom: -4px;
+        left: -4px;
+        right: -4px;
+        border-radius: 8px;
+        border: 3px solid #FED980;
+      }
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      z-index: 0;
+      bottom: 94px;
+      border: 2px solid #0D0C21;
+      left: 0;
+      right: 0;
+    }
+  }
+}
