--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -6,6 +6,12 @@
 .test-maturite {
   padding: 0 var(--gouttiere);
 
+  .etape {
+    color:#3A3A3A;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+  }
+
   label {
     display: block;
     cursor: pointer;
