--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -3,18 +3,53 @@
 
 @import "responsive";
 
+p, h1, h2, h3, h4, h5 {
+  margin: 0;
+}
+
 .test-maturite {
-  padding: 0 var(--gouttiere);
+  padding: 32px var(--gouttiere);
 
   .etape {
-    color:#3A3A3A;
+    color: #3A3A3A;
     font-size: 0.875rem;
     line-height: 1.5rem;
   }
 
+  h5 {
+    margin-top: 4px;
+    font-size: 1.125rem;
+    font-weight: bold;
+    line-height: 1.5rem;
+  }
+
+  .etapier {
+    margin: 12px 0 32px;
+  }
+
+  h4 {
+    font-size: 1.375rem;
+    font-weight: bold;
+    line-height: 1.75rem;
+    margin-bottom: 24px;
+  }
+
+  .propositions {
+    padding: 16px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
   label {
-    display: block;
+    display: flex;
     cursor: pointer;
+    gap: 8px;
+    align-items: flex-start;
+
+    input {
+      margin-top: 8px
+    }
   }
 
   .commandes {
@@ -27,6 +62,8 @@
 
     a {
       margin-top: 16px;
+      color: var(--noir);
+      text-underline-offset: 4px;
     }
   }
 
