--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -676,3 +676,12 @@ footer {
     background-color: var(--noir);
   }
 }
+
+select {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px 4px 0 0;
+  border-bottom: 2px solid #3A3A3A;
+  background: #EEE;
+  width: 100%;
+}
