--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -71,13 +71,32 @@ p, h1, h2, h3, h4, h5 {
     label {
       display: flex;
       flex-direction: column;
+      margin: 40px 0 8px;
     }
 
     .choix-taille {
       border: none;
+      margin: 40px 0 16px;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      legend {
+        margin-bottom: 16px;
+      }
+
+      input {
+        width: 24px;
+        height: 24px;
+        margin: 0;
+      }
 
       label {
+        margin: 0;
         flex-direction: row;
+        align-items: center;
+        gap: 8px;
       }
     }
   }
