--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -60,10 +60,21 @@ p, h1, h2, h3, h4, h5 {
     margin-bottom: 32px;
     text-align: center;
 
+    @include a-partir-de(sm) {
+      flex-direction: row;
+      align-items: center;
+      .bouton.secondaire {
+        margin-left: auto;
+      }
+    }
+
     a {
       margin-top: 16px;
       color: var(--noir);
       text-underline-offset: 4px;
+      @include a-partir-de(sm) {
+        margin-top: 0;
+      }
     }
   }
 
