Affiche un contenu du Hero différent pour les questions et pour le résultat

--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -179,7 +179,7 @@ p, h1, h2, h3, h4, h5 {
     gap: 8px;
     position: relative;
 
-    .illustration {
+    .plante {
       order: 3;
       z-index: 2;
     }
