--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -286,6 +286,10 @@ h5 {
     padding: 0;
     margin: 0;
 
+    @include a-partir-de(sm) {
+      display: none;
+    }
+
     li {
       padding: 8px;
       margin: 0;
